--- a/users/templates/users/profile_form.html
+++ b/users/templates/users/profile_form.html
@@ -13,7 +13,7 @@
             <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
             <br>
 
-            <form method="POST" action="{% url 'edit_account' %}", enctype="multipart/form-data">
+            <form class="form" method="POST" action="{% url 'edit-account' %}", enctype="multipart/form-data">
                 {% csrf_token %}
 
                 {% for field in form %}
